--- a/JAVASCRIPT/styles.css
+++ b/JAVASCRIPT/styles.css
@@ -1,13 +1,3 @@
-.external-style{
+.external-css {
     color: red;
-    font-size: 20px;
-    background-color: yellow;
-    border: 2px solid black;
-    margin: 10px;
-    padding: 10px;
-    text-align: center;
-    border-radius: 5px;
-    box-shadow: 2px 2px 5px grey;
-    width: 200px;
-    height: 100px;
 }
